--- a/index.qmd
+++ b/index.qmd
@@ -8,12 +8,16 @@ code-tools: false
 [Advent of Code](https://adventofcode.com) is a series of increasingly difficult programming challenges, 
 released daily each year throughout December in the run-up to Christmas.
 
-This website is created from the [EllaKaye/advent-of-code](https://github.com/EllaKaye/advent-of-code) repository.
-I use it to keep a record of my solutions and make notes about what I learn along the way. It is built with [Quarto](https://quarto.org) and supported by [R functions](https://github.com/EllaKaye/advent-of-code/blob/main/R/setup.R) to ease the process of downloading the data and creating the posts.
+This website is created from the  [EllaKaye/advent-of-code-website-template](https://github.com/EllaKaye/advent-of-code-website-template) template repository. 
 
-The idea for this site came from seeing [Emil Hvitfeldt's version](https://emilhvitfeldt.github.io/rstats-adventofcode/) and also adapts and builds upon code from David Robinson's [adventdrob](https://github.com/dgrtwo/adventdrob) package.
+It is built with [Quarto](https://quarto.org) and works hand-in-hand with the R package [**aochelpers**](https://github.com/EllaKaye/aochelpers). 
+The package provides function to manage this website, e.g. to create new posts from a template, 
+to download and read in the puzzle input, 
+and will eventually include functions to help with the challenges themselves. See the [package website](https://ellakaye.github.io/aochelpers/) for more details.
 
-The styling is based on my [personal site](https://ellakaye.co.uk).
+As part of the demo, this template comes with an example listing page and some example posts, which you can delete with `aochelpers::aoc_delete_year(2022)`.
+
+There are two built-in themes. The light theme is designed to be quite clean, with a Christmas green and red colours. The dark theme is designed to be reminiscent of the Advent of Code website (though not identical, since the design of <https://adventofcode.com> is part of its registered trademark). You can switch between them using the toggle in the top right corner of the page.
 
 
 
